Overview of changes from Beebop 1.2.1 to 1.4.0
==============================================

  [New features]
    * Optionally fill in the Notes field.

  [Bug fixes]
    * Correctly handle cursor position when pasting.


Overview of changes from Beebop 1.2.0 to 1.2.1
==============================================

  [Bug fixes]
    * Make sure all values that are supposed to fit a single line
      contain no embedded newlines, even when pasting from an
      external source.


Overview of changes from Beebop 1.0.0 to 1.2.0
==============================================

  [New features]
    * Open files from the command line or file browser.
    * Save PDF files to a separate directory.
    * Fill closing row with asterisks.
    * Make the header font configurable.

  [Bug fixes]
    * Correctly detect when sending to recipient.
    * Correctly update destination when recipient changes.
    * Correctly update controls as rows are added or removed.
    * Check header markup for validity.


Overview of changes in Beebop 1.0.0
===================================

  * First release.